fix: header on mobile

--- a/style/responsive.css
+++ b/style/responsive.css
@@ -1,5 +1,5 @@
 @media screen and (max-width: 700px) {
-  header .container {
+  header .container1 {
     display: flex;
     flex-direction: column;
   }
